--- a/src/styles/PickStyles/_pick.scss
+++ b/src/styles/PickStyles/_pick.scss
@@ -1,7 +1,17 @@
 @use "../global" as *;
 
+// Color Variables
+$highlight-blue: royalblue;
+$text-black: black; // Replacing the color for text with black
+$text-orange: #125e28; // Assuming orange as a highlight color
+$button-hover-bg: #070e6d; // Theme color for button hover
+
+// Gradient color from top
+$gradient-color: #dce6f8;
+
 .pick-section {
   padding: 10rem 0;
+  background: linear-gradient(to bottom, $gradient-color, white); // Applying gradient
 }
 
 .pick-container {
@@ -11,14 +21,14 @@
   &__title {
     margin: 0 auto;
     text-align: center;
-    color: $text-black;
+    color: $text-black; // Updated to black for titles
     max-width: 50rem;
     margin-bottom: 5rem;
 
     p {
       font-size: $p-size;
       font-family: $text-font;
-      color: $text-gray;
+      color: $text-black; // Black text for paragraph
       line-height: 1.5;
     }
 
@@ -64,7 +74,7 @@
     text-align: left;
 
     &:hover {
-      background-color: $text-orange;
+      background-color: $highlight-blue; // Royal blue hover effect
       color: white;
     }
   }
@@ -109,7 +119,6 @@
     grid-template-columns: 1fr;
     grid-template-rows: auto;
     font-size: 1.4rem;
-    // font-family: $text-font;
 
     &__col {
       display: grid;
@@ -117,12 +126,12 @@
       text-align: center;
       grid-template-rows: auto;
       padding: 0.9rem 0.5rem;
-      border-bottom: 2px solid #706f7b;
-      border-right: 2px solid #706f7b;
-      border-left: 2px solid #706f7b;
+      border-bottom: 2px solid black; // Updated to black border color
+      border-right: 2px solid black; // Updated to black
+      border-left: 2px solid black; // Updated to black
 
       span:nth-child(1) {
-        border-right: 2px solid #706f7b;
+        border-right: 2px solid black; // Updated with black
       }
     }
   }
@@ -135,7 +144,7 @@
   font-weight: 600;
   color: white;
   font-family: $titles-font;
-  background-color: $text-orange;
+  background-color: $highlight-blue; // Royal blue background for call-to-action buttons
   padding: 1rem 1rem;
   display: flex;
   width: 100%;
@@ -145,7 +154,7 @@
   box-shadow: 6px 6px 0 #efe9e9;
 
   &:hover {
-    background-color: #e9381d;
+    background-color: $button-hover-bg; // Theme color for button hover
   }
 }
 
@@ -167,16 +176,16 @@
 }
 
 .colored-button {
-  background-color: $text-orange !important;
+  background-color: $highlight-blue !important; // Royal blue button for emphasis
   color: white;
 }
 
-// spiner
+// Spinner loader with black and royal blue accents
 .loader {
   width: 48px;
   height: 48px;
-  border: 5px solid #00000042;
-  border-bottom-color: #ff3d00;
+  border: 5px solid #00000042; // Keeping black for border
+  border-bottom-color: $highlight-blue; // Royal blue accent for loader
   border-radius: 50%;
   display: inline-block;
   box-sizing: border-box;
