--- a/src/styles/FooterStyles/_footer.scss
+++ b/src/styles/FooterStyles/_footer.scss
@@ -1,18 +1,18 @@
 @use "../global" as *;
 
 footer {
-  background-color: $bg-white;
+  background: linear-gradient(to bottom, transparent 0%, #dce6f8 100%);
   padding: 10rem 0;
+  color: #010103;
 }
 
 .footer-content {
   display: grid;
-  color: #010103;
   grid-template-columns: 27fr 21fr 21fr 21fr;
   gap: 8rem;
   justify-content: center;
   text-align: left;
-  color: $text-black;
+  color: #010103;
 
   @media (max-width: 1100px) {
     grid-template-columns: 1fr 1fr;
@@ -22,9 +22,9 @@ footer {
     grid-template-columns: 1fr;
   }
 
-  &__1 {
+  &__1,
+  &__2 {
     list-style: none;
-    // max-width: 30rem;
 
     @media (max-width: 650px) {
       text-align: center;
@@ -33,26 +33,24 @@ footer {
     li {
       a {
         text-decoration: none;
-        color: $text-black;
+        color: #010103;
         transition: all 0.2s;
 
         &:hover {
-          color: $text-orange;
+          color: #4169e1; // Royal Blue on hover
         }
       }
 
       &:nth-child(1) {
         font-size: $h3-size;
+        font-weight: 700;
         margin-bottom: 1.5rem;
-
-        span {
-          font-weight: 700;
-        }
+        font-family: $titles-font;
       }
 
       &:nth-child(2) {
         font-size: $p-size;
-        color: $text-gray;
+        color: #666;
         line-height: 1.7;
         margin-bottom: 3rem;
       }
@@ -65,46 +63,14 @@ footer {
         margin-bottom: 1rem;
       }
     }
-  }
-
-  &__2 {
-    list-style: none;
-
-    @media (max-width: 650px) {
-      text-align: center;
-    }
-
-    a {
-      text-decoration: none;
-      color: $text-black;
-      transition: all 0.2s;
-
-      &:hover {
-        color: $text-orange;
-      }
-    }
-
-    li {
-      font-size: $p-size;
-      margin-bottom: 1rem;
-
-      &:nth-child(1) {
-        font-size: $h3-size;
-        font-weight: 700;
-        text-transform: uppercase;
-        font-family: $titles-font;
-        cursor: auto;
-      }
-    }
 
     input {
       font-family: $text-font;
       font-size: 14px;
       font-weight: 400;
       line-height: 26px;
-      background-color: #ececec;
-      border-width: 1px;
-      border-color: transparent;
+      background-color: #f4f4f4;
+      border: 1px solid #ccc;
       padding: 10px 60px;
       outline: none;
       margin-top: 1rem;
@@ -118,21 +84,20 @@ footer {
 
 .submit-email {
   text-decoration: none;
-  color: white;
+  color: #ffffff;
   font-weight: 700;
-  background-color: #ff4d30;
+  background-color: #4169e1; // Royal Blue
   padding: 1.5rem 2.5rem;
   border-radius: 0.3rem;
-  box-shadow: 0 10px 15px 0 rgb(255 83 48 / 25%);
+  box-shadow: 0 10px 15px 0 rgba(65, 105, 225, 0.25);
   transition: all 0.3s;
-  border: 2px solid #ff4d30;
+  border: 2px solid #4169e1;
   font-size: 1.6rem;
-  width: fit-content;
-  cursor: pointer;
   width: 100%;
+  cursor: pointer;
 
   &:hover {
-    box-shadow: 0 10px 15px 0 rgb(255 83 48 / 40%);
-    background-color: #fa4226;
+    background-color: #3558c8;
+    box-shadow: 0 10px 15px 0 rgba(65, 105, 225, 0.4);
   }
 }
