--- a/src/styles/global/_boilerplate.scss
+++ b/src/styles/global/_boilerplate.scss
@@ -30,7 +30,7 @@ body {
 /* Firefox */
 * {
   scrollbar-width: thin;
-  scrollbar-color: #ff4d30 #ffffff;
+  scrollbar-color: #491ee7 #ffffff;
 }
 
 /* Chrome, Edge and Safari */
@@ -53,13 +53,13 @@ body {
 
 *::-webkit-scrollbar-thumb {
   border-radius: 20px;
-  background-color: #ff4d30;
+  background-color: #4f30ff;
 }
 
 *::-webkit-scrollbar-thumb:hover {
-  background-color: #ff4d30;
+  background-color: #3056ff;
 }
 
 *::-webkit-scrollbar-thumb:active {
-  background-color: #ff2525;
+  background-color: #3425ff;
 }
